# rakuyomi-koshin

./: .envrc.dist  .gitignore  AGENTS.md  CHANGELOG.md  README.md  flake.nix
.github/: AGENTS.md
.github/workflows/: deploy-pages.yml  test.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  TRACKING-SYNC-PLAN.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: dev-server-startup-failure.md
.planning/phases/01-backend-foundation-database-schema-auth-qr/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VALIDATION.md
.planning/quick/20260628-add-test-script/: PLAN.md  SUMMARY.md
.planning/research/: MIHON_TRACKERS.md  TRACKER_INTEGRATION.md
backend/: AGENTS.md
backend/cbz_metadata_reader/: AGENTS.md
backend/server/: AGENTS.md  Cargo.toml
backend/server/src/: app.rs  error.rs  lib.rs  state.rs
backend/server/src/manga/: routes.rs
backend/server/src/track/: mod.rs  qr.rs  routes.rs  state.rs  sync.rs
backend/server/src/track/auth/: anilist.rs  mal.rs  mod.rs
backend/server/src/trackers/: anilist.rs  mangadex.rs  mod.rs
backend/shared/: AGENTS.md  Cargo.toml
backend/shared/src/: database.rs  lib.rs
backend/uds_http_request/: AGENTS.md
backend/wasm_macros/: AGENTS.md
backend/wasm_shared/: AGENTS.md
ci/: AGENTS.md
docs/: AGENTS.md  book.toml
docs/src/: SUMMARY.md  anilist-research.md
e2e-tests/: AGENTS.md
frontend/: AGENTS.md
frontend/rakuyomi.koplugin/: AGENTS.md  Backend.lua  ChapterListing.lua  Settings.lua  TrackerSearchDialog.lua  TrackingMenu.lua
scripts/: AGENTS.md
tools/: AGENTS.md  dev-linux.sh  dev-macos.sh  prepare-sqlx-queries.sh  run-koreader-with-plugin.sh  setup-macos.sh
(+23 files in other folders)
