[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
# `bin` is used on Linux/Kindle/Kobo/reMarkable. `cdylib` is loaded by
# the Android companion app via JNI. We cannot have `rlib` here because
# `bin` and `lib` with the same name conflict — the `bin` target is
# sourced from `src/main.rs` and the library from `src/lib.rs`.
crate-type = ["lib", "cdylib"]

[[bin]]
name = "server"
path = "src/main.rs"

[features]
# `ffi` is Android-only (JNI bridge + postcard-friendly serde_bytes). The
# OAuth HTTP client (`reqwest`) is no longer gated here: AniList/MAL OAuth
# runs on every platform, not just Android.
ffi = ["dep:serde_bytes", "dep:jni", "shared/ffi"]
api_18 = ["dep:libc"]

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1"
axum = "0.8.9"
axum-macros = "0.5.1"
base64 = "0.22"
clap = { version = "4.6.1", features = ["derive"] }
futures = "0.3.32"
hex = "0.4"
humansize = "2.1.3"
image = "0.25"
log = "0.4.30"
qrcode = { version = "0.14.1", features = ["image"] }
rand = "0.8"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = { version = "0.11", optional = true }
serde_json = "1.0.150"
sha2 = "0.11"
shared = { path = "../shared" }
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5.8"
uuid = { version = "1.23.2", features = ["serde", "v4"] }
jni = { version = "0.22", optional = true }
libc = { version = "0.2.186", optional = true }
[target.'cfg(not(feature = "api_18"))'.dependencies]
nix = { version = "0.31.3", features = ["mount", "fs"], default-features = false }
size = "0.5.0"
